Envia y consume el evento de FacturaAddPlato sin embargo a la hora de actualizar la base de datos no parece funcionar el caso findByID de factura